--- a/_about-us/Photo Gallery/2021.md
+++ b/_about-us/Photo Gallery/2021.md
@@ -4,3 +4,22 @@ permalink: /about-us/Photo-Gallery/photo-gallery-2021/
 description: ""
 third_nav_title: Photo Gallery
 ---
+# **Photo Gallery 2021**
+
+------------------------------------------------------------------------
+### Chinese New Year Celebration
+
+![](/images/photo%20gallery%202021-1.jpg)
+![](/images/photo%20gallery%202021-2.jpg)
+
+-----------------------------------------------------------------------
+### Founders' Day Celebration 
+
+![](/images/photo%20gallery%202021-3.jpg)
+![](/images/photo%20gallery%202021-4.jpg)
+![](/images/photo%20gallery%202021-5.jpg)
+
+-----------------------------------------------------------------------
+### Cross Country
+
+![](/images/photo%20gallery%202021-6.jpg)
