--- a/_about-us/Photo Gallery/2021.md
+++ b/_about-us/Photo Gallery/2021.md
@@ -23,3 +23,20 @@ third_nav_title: Photo Gallery
 ### Cross Country
 
 ![](/images/photo%20gallery%202021-6.jpg)
+
+-----------------------------------------------------------------------
+###  Special Achievement Service
+
+![](/images/photo%20gallery%202021-7.jpg)
+
+----------------------------------------------------------------------
+
+### National Day Celebration
+
+![](/images/WhatsApp-Image-2021-08-06.jpeg)
+
+![](/images/WhatsApp-Image-2021-08-06-1.jpeg)
+
+![](/images/WhatsApp-Image-2021-08-06-2.jpeg)
+
+![](/images/WhatsApp-Image-2021-08-06-4.jpeg)
