--- a/_about-us/Photo Gallery/2021.md
+++ b/_about-us/Photo Gallery/2021.md
@@ -40,3 +40,21 @@ third_nav_title: Photo Gallery
 ![](/images/WhatsApp-Image-2021-08-06-2.jpeg)
 
 ![](/images/WhatsApp-Image-2021-08-06-4.jpeg)
+
+![](/images/IMG_1054-1024x683.jpg)
+
+(only uploaded 5 images)
+
+----------------------------------------------------------------------
+
+### Teachers' Day Celebration
+
+![](/images/teachersday-1.jpg)
+
+![](/images/teachersday-2.jpg)
+
+![](/images/teachersday-3.jpg)
+
+![](/images/teachersday-4.jpg)
+
+(only uploaded 5 images)
