--- a/_about-us/Photo Gallery/2020.md
+++ b/_about-us/Photo Gallery/2020.md
@@ -4,3 +4,30 @@ permalink: /about-us/Photo-Gallery/photo-gallery-2020/
 description: ""
 third_nav_title: Photo Gallery
 ---
+# **Photo Gallery 2020**
+-------------------------------------------------------------------------
+
+### CCAs Fair
+
+![](/images/pg2020-1.jpg)
+![](/images/pg2020-2.jpg)
+
+-------------------------------------------------------------------------
+
+### Levels Activities
+
+![](/images/pg2020-3.jpg)
+![](/images/pg2020-4.jpg)
+![](/images/pg2020-5.jpg)
+
+-------------------------------------------------------------------------
+
+### CNY Celebration
+
+![](/images/pg2020-6.jpg)
+![](/images/pg2020-7.jpg)
+![](/images/pg2020-8.jpg)
+
+-------------------------------------------------------------------------
+
+### Teachers' Day Celebration
