--- a/_about-us/Photo Gallery/2020.md
+++ b/_about-us/Photo Gallery/2020.md
@@ -31,3 +31,11 @@ third_nav_title: Photo Gallery
 -------------------------------------------------------------------------
 
 ### Teachers' Day Celebration
+
+![](/images/pg2020-9.jpg)
+
+-------------------------------------------------------------------------
+
+### Special Achievement Service
+
+![](/images/pg2020-10.jpg)
