--- a/_about-us/Photo Gallery/2019.md
+++ b/_about-us/Photo Gallery/2019.md
@@ -32,7 +32,85 @@ third_nav_title: Photo Gallery
 ![](/images/pg2019-6.jpg)
 
 ![](/images/pg2019-7.jpg)
+(uploaded 3 images only)
 
 -------------------------------------------------------------------------
 
-### CNY Celebration
+### Cross Country
+
+![](/images/pg2019-8.jpg)
+(uploaded 9/15)
+
+-------------------------------------------------------------------------
+
+### Learning Festival
+
+![](/images/pg2019-9.jpg)
+(uploaded 9/12)
+
+-------------------------------------------------------------------------
+
+### 95th Founders' Day Service
+
+![](/images/pg2019-10.jpg)
+(uploaded 1 image only)
+
+-------------------------------------------------------------------------
+
+### 95th Founders' Day Dinner
+![](/images/pg2019-11.jpg)
+(uploaded 1 image only)
+
+-------------------------------------------------------------------------
+
+### FamChamps - Family Night
+
+![](/images/pg2019-12.jpg)
+(uploaded 9/18 only)
+
+-------------------------------------------------------------------------
+
+### 2nd Student Leaders Investiture
+
+![](/images/pg2019-13.jpg)
+(uploaded 1 image only)
+
+-------------------------------------------------------------------------
+
+### Little Night Concert
+
+![](/images/pg2019-14.jpg)
+(uploaded 9/15)
+
+------------------------------------------------------------------------
+
+### Sports Day
+
+![](/images/pg2019-15.jpg)
+(uploaded 9/15)
+
+-------------------------------------------------------------------------
+
+### Special Achievement's Night
+
+![](/images/pg2019-17.jpg)
+(uploaded 9/12)
+
+-------------------------------------------------------------------------
+
+### NDP Celebration
+
+
+-------------------------------------------------------------------------
+
+### Teachers' Day Celebration
+-------------------------------------------------------------------------
+
+### Sec 1 - 3 Prize Giving
+
+-------------------------------------------------------------------------
+
+### Musical Night
+
+------------------------------------------------------------------------
+### Open House
