--- a/_about-us/Photo Gallery/2019.md
+++ b/_about-us/Photo Gallery/2019.md
@@ -93,24 +93,39 @@ third_nav_title: Photo Gallery
 
 ### Special Achievement's Night
 
-![](/images/pg2019-17.jpg)
+![](/images/pg2019-16.jpg)
 (uploaded 9/12)
 
 -------------------------------------------------------------------------
 
 ### NDP Celebration
 
+![](/images/pg2019-17.jpg)
+(uploaded 9/14)
 
 -------------------------------------------------------------------------
 
 ### Teachers' Day Celebration
+
+![](/images/pg2019-18.jpg)
+(uploaded 9/12)
+
 -------------------------------------------------------------------------
 
 ### Sec 1 - 3 Prize Giving
+
+![](/images/pg2019-19.jpg)
 
 -------------------------------------------------------------------------
 
 ### Musical Night
 
+![](/images/pg2019-20.jpg)
+(uploaded 9/27)
+
 ------------------------------------------------------------------------
 ### Open House
+
+
+![](/images/pg2019-21.jpg)
+(uploaded 9/12)
