--- a/_about-us/School Achievements/2022.md
+++ b/_about-us/School Achievements/2022.md
@@ -4,4 +4,11 @@ permalink: /about-us/School-Achievements/achievement-2022/
 description: ""
 third_nav_title: School Achievements
 ---
-<h1><b>Achievement 2022</b></h1>
+<h1><b>Achievement 2022</b></h1><ul class="jekyllcodex_accordion">
+  <li>
+    <input type="checkbox" id="accordion1">
+    <label for="accordion1">Academic</label>
+    <div>
+      <p><table style="border-collapse:collapse;border-spacing:0" class="tg"><thead><tr><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Subjects</span></th><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Event / Programme</span></th><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Awards Attained</span></th></tr></thead><tbody><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Design &amp; Technology</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Design Awards 2022</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Creative Aesthetics - Elly Tham (P46, 2021)<br><br>Creative Innovation - Leow Xue Yan (P46, 2021)</td></tr><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Design &amp; Technology</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Tan Kah Kee young inventors award</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Encouragement Award - Leow Xue Yan</td></tr><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Mathematics</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">GEMS Entrepreneurship Challenge</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal"></td></tr></tbody></table></p>
+    </div>
+	</li>  
