--- a/_about-us/School Achievements/2022.md
+++ b/_about-us/School Achievements/2022.md
@@ -11,4 +11,10 @@ third_nav_title: School Achievements
     <div>
       <p><table style="border-collapse:collapse;border-spacing:0" class="tg"><thead><tr><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Subjects</span></th><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Event / Programme</span></th><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Awards Attained</span></th></tr></thead><tbody><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Design &amp; Technology</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Design Awards 2022</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Creative Aesthetics - Elly Tham (P46, 2021)<br><br>Creative Innovation - Leow Xue Yan (P46, 2021)</td></tr><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Design &amp; Technology</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Tan Kah Kee young inventors award</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Encouragement Award - Leow Xue Yan</td></tr><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Mathematics</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">GEMS Entrepreneurship Challenge</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal"></td></tr></tbody></table></p>
     </div>
-	</li>  
+	</li> <li>
+    <input type="checkbox" id="accordion2">
+    <label for="accordion2">Co-curricular and Character Development Programmes</label>
+    <div>
+      <p><table style="border-collapse:collapse;border-spacing:0" class="tg"><thead><tr><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">CCAs</span></th><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Event / Programme</span></th><th style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Awards Attained</span></th></tr></thead><tbody><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Athletics</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">National School Games Track and Field Championships - B Division Boys 400m</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Royce Ong (P47) - 1st place</td></tr><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Board Games</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Inter-School Blokus Friendly Competition</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td></tr><tr><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Boys' Brigade</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Founder's Award</td><td style="border-color:#333333;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal">SSG Theodore Yeo (P43)<br>SSG Emmanuel Tan Ming Xuan (P42)</td></tr><tr><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Football</td><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">B Division football</td><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal">3rd place in the qualifying round</td></tr><tr><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Volleyball</td><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">East Zone Volleyball 2022 B Division Boys</td><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">2nd runner-up</td></tr><tr><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Volleyball</td><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">East Zone Volleyball 2022 C Division Boys</td><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">1st runner-up</td></tr><tr><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal"><span style="font-weight:400;font-style:normal;background-color:#FFF">Photography &amp; Videography</span></td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal"><span style="font-weight:400;font-style:normal;background-color:#FFF">Food Photography Exhibition @ Geylang East Library</span></td><td style="border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"></td></tr></tbody></table></p>
+    </div>
+  </li>
