--- a/_about-us/School Achievements/2022.md
+++ b/_about-us/School Achievements/2022.md
@@ -21,4 +21,4 @@ third_nav_title: School Achievements
 	<img src="/images/achievement22-1.jpg">
 	<img src="/images/achievement22-2.jpg">
 	<img src="/images/achievement22-3.jpg">
-
+	(uploaded 3 images only)
