--- a/_about-us/School Achievements/2022.md
+++ b/_about-us/School Achievements/2022.md
@@ -4,7 +4,8 @@ permalink: /about-us/School-Achievements/achievement-2022/
 description: ""
 third_nav_title: School Achievements
 ---
-<h1><b>Achievement 2022</b></h1><ul class="jekyllcodex_accordion">
+<h1><b>Achievement 2022</b></h1>
+<ul class="jekyllcodex_accordion">
   <li>
     <input type="checkbox" id="accordion1">
     <label for="accordion1">Academic</label>
