--- a/_about-us/School Achievements/2020.md
+++ b/_about-us/School Achievements/2020.md
@@ -21,3 +21,10 @@ third_nav_title: School Achievements
     </div>
   </li>
 	</ul>
+	<br>
+	<br>
+	<img src="/images/achievement20-1.jpg">
+	<img src="/images/achievement20-2.jpg">
+	<img src="/images/achievement20-3.jpg">
+	(uploaded 3 images only)
+	
