--- a/_about-us/School Achievements/2019.md
+++ b/_about-us/School Achievements/2019.md
@@ -4,3 +4,26 @@ permalink: /about-us/School-Achievements/achievement-2019/
 description: ""
 third_nav_title: School Achievements
 ---
+<h1><b>Achievement 2019</b></h1>
+<br>
+<ul class="jekyllcodex_accordion">
+  <li>
+    <input type="checkbox" id="accordion1">
+    <label for="accordion1">Academic</label>
+    <div>
+      <p><table style="border-collapse:collapse;border-spacing:0" class="tg"><thead><tr><th style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Subjects</span></th><th style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Event / Programme</span></th><th style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Awards Attained</span></th></tr></thead><tbody><tr><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Design &amp; Technology</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">NYP Science and Technology Challenge</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Intelligent Innovators' Fair - 1st<br><br>Take Flight 7 Soar - 2nd<br>Balloon-powered vehicle - Most innovative</td></tr><tr><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">English</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">YMCA Plain English Speaking Awards (Lower Sec)</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">2nd place</td></tr><tr><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Science</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">F1 in Schools Singapore National Finals (Development Class)</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">All 5 awards</td></tr><tr><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Science</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">F1 in Schools Singapore National Finals (Professional Team)</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#643403;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Best Portfolio<br><br>Best Verbal Presentation</td></tr></tbody></table></p>
+    </div>
+	</li> <li>
+    <input type="checkbox" id="accordion2">
+    <label for="accordion2">Co-curricular and Character Development Programmes</label>
+    <div>
+      <p><table style="border-collapse:collapse;border-spacing:0" class="tg"><thead><tr><th style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">CCAs</span></th><th style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Event / Programme</span></th><th style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;font-weight:bold;overflow:hidden;padding:10px 5px;text-align:center;vertical-align:top;word-break:normal"><span style="font-weight:bold">Awards Attained</span></th></tr></thead><tbody><tr><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Photography &amp; Videography Society</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:middle;word-break:normal">Our Schools, Our Stories (OSOS) Photo Contest</td><td style="background-color:#FFF;border-color:black;border-style:solid;border-width:1px;color:#333333;font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;text-align:left;vertical-align:top;word-break:normal"><a href="https://www.moe.gov.sg/our-schools-our-stories/osos-2020/winning-stories/my-school-community" target="_blank" rel="noopener noreferrer"><span style="text-decoration:none;background-color:transparent">Our School Community - Honourable Mention</span></a><br><br><a href="https://www.moe.gov.sg/our-schools-our-stories/osos-2020/winning-stories/united-as-one" target="_blank" rel="noopener noreferrer"><span style="text-decoration:none;background-color:transparent">United as One - Honourable Mention</span></a></td></tr></tbody></table></p>
+    </div>
+  </li>
+	</ul>
+	<br>
+	<br>
+	<img src="/images/achievement20-1.jpg">
+	<img src="/images/achievement20-2.jpg">
+	<img src="/images/achievement20-3.jpg">
+	(uploaded 3 images only)
