--- a/_about-us/Photo Gallery/2017.md
+++ b/_about-us/Photo Gallery/2017.md
@@ -4,8 +4,97 @@ permalink: /about-us/Photo-Gallery/photo-gallery-2017/
 description: ""
 third_nav_title: Photo Gallery
 ---
-
-Photo Gallery 2017
-==================
+# **Photo Gallery 2017**
+-----------------------------------------------------------------------
 
 ### Level Camps
+
+![](/images/pg2017-1.jpg)
+(uploaded 9/12)
+
+A new beginning for all GeMs as they start the New Year with level camps! Students from different levels bond over camp activities as they encouraged to step out of their comfort zones and learn to improve themselves through challenges they face during the level camps. The students would participate in variety of activities such as making edible cookies, building unique sandcastles at the beach and having a competition to see who could make the tallest tower with recycled materials.
+
+-------------------------------------------------------------------------
+
+### Chinese New Year Celebration
+
+![](/images/pg2017-2.jpg)
+(uploaded 9/12)
+
+Our own GeMs enjoyed stage performances by the Chinese Dance and Drama students along with solo acts to celebrate Chinese New Year 2017. Besides the performances, students also participate in the Hamper making competition where each class complete with one another to create the most aesthetically pleasing hamper.
+
+-------------------------------------------------------------------------
+
+### Cross Country
+
+![](/images/pg2018-3.jpg)
+(uploaded 9/15)
+
+-------------------------------------------------------------------------
+
+### 94th Founders' Day Service
+
+![](/images/pg2018-4.jpg)
+(uploaded 9/18)
+
+-------------------------------------------------------------------------
+
+### Founders' Day Dinner
+
+![](/images/pg2018-5.jpg)
+(uploaded 9/27)
+
+-------------------------------------------------------------------------
+
+### 10th Student Council Investiture
+
+![](/images/pg2018-6.jpg)
+
+-------------------------------------------------------------------------
+
+### 1st Student Leaders Investiture
+
+![](/images/pg2018-7.jpg)
+
+------------------------------------------------------------------------
+
+### Little Night Concert
+
+![](/images/pg2018-8.jpg)
+(uploaded 9/12)
+
+------------------------------------------------------------------------
+
+### Sports Day
+
+![](/images/pg2018-9.jpg)
+(uploaded 9/15)
+
+-------------------------------------------------------------------------
+
+### National Day Celebration & Value-In-Action
+
+![](/images/pg2018-10.jpg)
+(uploaded 9/18)
+
+-------------------------------------------------------------------------
+
+### Teachers' Day Celebration
+
+![](/images/pg2018-11.jpg)
+(uploaded 9/18)
+
+-------------------------------------------------------------------------
+
+### Sec 1 - 3 Prize Giving
+
+![](/images/pg2018-12.jpg)
+(uploaded 9/17)
+
+-------------------------------------------------------------------------
+
+### Open House
+
+
+![](/images/pg2018-13.jpg)
+(uploaded 9/12)
