--- a/_about-us/Photo Gallery/2017.md
+++ b/_about-us/Photo Gallery/2017.md
@@ -10,7 +10,7 @@ third_nav_title: Photo Gallery
 ### Level Camps
 
 ![](/images/pg2017-1.jpg)
-(uploaded 9/12)
+(uploaded 9/15)
 
 A new beginning for all GeMs as they start the New Year with level camps! Students from different levels bond over camp activities as they encouraged to step out of their comfort zones and learn to improve themselves through challenges they face during the level camps. The students would participate in variety of activities such as making edible cookies, building unique sandcastles at the beach and having a competition to see who could make the tallest tower with recycled materials.
 
@@ -19,16 +19,18 @@ A new beginning for all GeMs as they start the New Year with level camps! Studen
 ### Chinese New Year Celebration
 
 ![](/images/pg2017-2.jpg)
-(uploaded 9/12)
+(uploaded 9/15)
 
 Our own GeMs enjoyed stage performances by the Chinese Dance and Drama students along with solo acts to celebrate Chinese New Year 2017. Besides the performances, students also participate in the Hamper making competition where each class complete with one another to create the most aesthetically pleasing hamper.
 
 -------------------------------------------------------------------------
 
-### Cross Country
+### Chinese New Year Block Party
 
-![](/images/pg2018-3.jpg)
+![](/images/pg2017-3.jpg)
 (uploaded 9/15)
+
+The festivities doesn't just end in school, GeMs escorted the elderly living in the vicinity of the neighbourhood to celebrate and enjoy the performances by the Chinese Dance and Choir students.
 
 -------------------------------------------------------------------------
 
