--- a/_about-us/Photo Gallery/2017.md
+++ b/_about-us/Photo Gallery/2017.md
@@ -34,6 +34,13 @@ The festivities doesn't just end in school, GeMs escorted the elderly living in 
 
 -------------------------------------------------------------------------
 
+### Little Night Concert
+
+![](/images/pg2017-4.jpg)
+
+The production reflects the hard work that the young talent of GMS(S) had put in. The GeMs band created melodious sounds and the Chinese Dance members swayed gracefully to the music. The harmony of vocals from the Choir further complimented the performances, leaving an impact on the audience.
+
+------------------------------------------------------------------------
 ### 94th Founders' Day Service
 
 ![](/images/pg2018-4.jpg)
