--- a/_about-us/Photo Gallery/2017.md
+++ b/_about-us/Photo Gallery/2017.md
@@ -41,10 +41,12 @@ The festivities doesn't just end in school, GeMs escorted the elderly living in 
 The production reflects the hard work that the young talent of GMS(S) had put in. The GeMs band created melodious sounds and the Chinese Dance members swayed gracefully to the music. The harmony of vocals from the Choir further complimented the performances, leaving an impact on the audience.
 
 ------------------------------------------------------------------------
-### 94th Founders' Day Service
+### 93rd Founders' Day Service
 
-![](/images/pg2018-4.jpg)
-(uploaded 9/18)
+![](/images/pg2017-5.jpg)
+(uploaded 9/15)
+
+GM turns 93 this year. The school commemorated Founders' Day with a service specially acknowledged different groups of students who have done well in academic and building characters. The occasion is celebrated with a time of praise and worship and performances by Chinese Dance.
 
 -------------------------------------------------------------------------
 
