--- a/_about-us/Photo Gallery/2017.md
+++ b/_about-us/Photo Gallery/2017.md
@@ -52,8 +52,10 @@ GM turns 93 this year. The school commemorated Founders' Day with a service spe
 
 ### Founders' Day Dinner
 
-![](/images/pg2018-5.jpg)
-(uploaded 9/27)
+![](/images/pg2017-6.jpg)
+(uploaded 9/15)
+
+To celebrate our 93rd anniversary, staff gathered together for a special dinner to commemorate our school and all the dedication provided by the teachers who have inspired and left a mark on the lives of many students. The dinner was accompanied by special performances from students and teachers.
 
 -------------------------------------------------------------------------
 
