--- a/_about-us/Photo Gallery/2017.md
+++ b/_about-us/Photo Gallery/2017.md
@@ -59,36 +59,21 @@ To celebrate our 93rd anniversary, staff gathered together for a special dinner 
 
 -------------------------------------------------------------------------
 
-### 10th Student Council Investiture
-
-![](/images/pg2018-6.jpg)
-
--------------------------------------------------------------------------
-
-### 1st Student Leaders Investiture
-
-![](/images/pg2018-7.jpg)
-
-------------------------------------------------------------------------
-
-### Little Night Concert
-
-![](/images/pg2018-8.jpg)
-(uploaded 9/12)
-
-------------------------------------------------------------------------
-
 ### Sports Day
 
-![](/images/pg2018-9.jpg)
+![](/images/pg2017-7.jpg)
 (uploaded 9/15)
+
+Students come together in their respective house colours to compete against each other in games and races. They show their team spirit in cheer competitions to gain points to become the house champion. The true GM spirit is displayed through the contributions of each individual as every point matters and every member of the school contributed to a common goal.
 
 -------------------------------------------------------------------------
 
-### National Day Celebration & Value-In-Action
+### National Day Celebration
 
-![](/images/pg2018-10.jpg)
-(uploaded 9/18)
+![](/images/pg2017-8.jpg)
+(uploaded 9/15)
+
+The annual celebration of Singapore's birthday started with a procession led by the Girl Guides, Boys' Brigade and National Police Cadet Corps (NPCC). The flag was raised and the singing of the national anthem was accompanied by the school band. Performances were put by the students and teachers. A mascot contest was held where classes were challenged to construct the most creative costumes made from recycled materials.
 
 -------------------------------------------------------------------------
 
