--- a/_about-us/Photo Gallery/2017.md
+++ b/_about-us/Photo Gallery/2017.md
@@ -77,22 +77,9 @@ The annual celebration of Singapore's birthday started with a procession led by 
 
 -------------------------------------------------------------------------
 
-### Teachers' Day Celebration
+### Teachers' Day Celebration - Talent Time
 
-![](/images/pg2018-11.jpg)
-(uploaded 9/18)
+![](/images/pg2017-9.jpg)
+(uploaded 9/15)
 
--------------------------------------------------------------------------
-
-### Sec 1 - 3 Prize Giving
-
-![](/images/pg2018-12.jpg)
-(uploaded 9/17)
-
--------------------------------------------------------------------------
-
-### Open House
-
-
-![](/images/pg2018-13.jpg)
-(uploaded 9/12)
+On Teachers' Day to recognize and commemorate the efforts of the teachers in guiding the students, the multitude of unique performances included dance covers of popular songs as well as original songs dedicated to teachers and yoyo tricks that enthralled everyone. The first ever talent show that showcased the abilities of students through song and dance was held. There were also activities that called for crowd participation where students and teachers competed in general knowledge quizzes. There was a special percussion extravaganza performed by a class.
