--- a/_about-us/Photo Gallery/2023.md
+++ b/_about-us/Photo Gallery/2023.md
@@ -4,3 +4,5 @@ permalink: /about-us/Photo-Gallery/photo-gallery-2023/
 description: ""
 third_nav_title: Photo Gallery
 ---
+#### CNY Celebration
+![](/images/2023%20CNY_Page_1.jpg)
