--- a/_about-us/Photo Gallery/2023.md
+++ b/_about-us/Photo Gallery/2023.md
@@ -4,6 +4,9 @@ permalink: /about-us/Photo-Gallery/photo-gallery-2023/
 description: ""
 third_nav_title: Photo Gallery
 ---
+#### Levels Activities
+![](/images/2023%20Levels%20activities_Page_1.jpg)
+![](/images/2023%20Levels%20activities_Page_2.jpg)
 #### CNY Celebration
 ![](/images/2023%20CNY_Page_1.jpg)
 ![](/images/2023%20CNY_Page_2.jpg)
