--- a/_about-us/Photo Gallery/2022.md
+++ b/_about-us/Photo Gallery/2022.md
@@ -12,6 +12,8 @@ description: ""
 
 
 #### Cross-Country
-![](/images/IMG_7005-1024x683.jpg)
 ![](/images/IMG_7025-1024x683.jpg)
-![](/images/IMG_7109-1024x683.jpg)
+
+
+#### Open House
+![](/images/2022%20Open%20House_Page_1.jpg)
