--- a/_about-us/Photo Gallery/2022.md
+++ b/_about-us/Photo Gallery/2022.md
@@ -14,6 +14,18 @@ description: ""
 #### Cross-Country
 ![](/images/IMG_7025-1024x683.jpg)
 
+#### Teachers' Day Celebration
+![](/images/2022%20Teachers%20Day_Page_1.jpg)
+![](/images/2022%20Teachers%20Day_Page_2.jpg)
+![](/images/2022%20Teachers%20Day_Page_3.jpg)
+
+
+#### Graduation Service
+![](/images/2022%20Graduation_Page_1.jpg)
+![](/images/2022%20Graduation_Page_2.jpg)
+![](/images/2022%20Graduation_Page_3.jpg)
+![](/images/2022%20Graduation_Page_4.jpg)
+
 
 #### Open House
 ![](/images/2022%20Open%20House_Page_1.jpg)
